# vrenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  buildShaders.bat
shaders/: shaders.cfg
shaders/terrain/: terrainPass.hlsl  terrain_cb.h  terrain_common.hlsli  terrain_ps.hlsl  terrain_vs.hlsl
source/: Renderer.cpp  Renderer.h  UIRenderer.h  basic_triangle.cpp  main.cpp
source/editor/: Editor.cpp  Editor.h  ImGuizmo.cpp  ImGuizmo.h
source/microprofile/: microprofile.h  microprofile_html.h
source/profiler/: Profiler.cpp  Profiler.h  ProfilerWindow.cpp
source/terrain/: QuadTree.cpp  QuadTree.h  TerrainPass.cpp  TerrainPass.h
